Improve overall quality of flow decomposition code
Signed-off-by: MURGEY Sebastien <sebastien.murgey@rte-france.com>